apps/base/kyverno-test/pod-ok.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod-ok
  name: pod-ok
spec:
  containers:
  - image: ghcr.io/rayanoss/kyverno-cosign:v1.0.0
    name: pod-ok
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
