apps/base/kyverno-test/image-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-signed-images
spec:
  webhookConfiguration:
    failurePolicy: Fail
    timeoutSeconds: 30
  validationFailureAction: enforce
  background: false
  rules:
    - name: check-image-signature
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - kyverno-test
      verifyImages:
        - imageReferences:
            - "ghcr.io/rayanoss/*"
          failureAction: Enforce
          attestors:
            - entries:
                - keyless:
                    issuer: "https://token.actions.githubusercontent.com"
                    subject: "^https://github.com/rayanoss/"
                    rekor:
                      url: "https://rekor.sigstore.dev"
